Branch: master, mainly update CMake.
Signed-off-by: Killer_Quinn <51754303+Certseeds@users.noreply.github.com>

--- a/期末复习/期末复习.md
+++ b/期末复习/期末复习.md
@@ -145,8 +145,7 @@ Until now, overview the orgrainze of OS,when we introduce OS we can follow this 
     + An offline scheduling algorithm assume all the sequece of process that will face,通常只用来计算理论值.
       + 典型案例:MIN,需要知道哪一个进程未来最晚被用到.
     + An online algorithm do not know what will happen.
-      + all other algorithm is that. 
-  SJF,FIFO等等算法都是需要了解的,建议参考[midterm](./../midterm_2019/midterm_2019.md).
+      + all other algorithm is that. SJF,FIFO等等算法都是需要了解的,建议参考[midterm](../midterm_2019/README.md).
 
 19. ` ls | less `在kernel中的详细过程.
   + in user space, shell analysis the command ,create `ls`,`pipe`,`less`.
